Fixed some layout issues

--- a/app/scss/_portfolio.scss
+++ b/app/scss/_portfolio.scss
@@ -69,6 +69,10 @@
     opacity: 1;
     transform: rotateY(0);
   }
+  &:hover + .flip-card-arrow {
+    opacity: 1;
+  }
+
   @include breakpoint-down(large) {
     max-width: 100%;
   }
